game-core/tests/snapshots/snapshots__0006_Horizontal bar merge and blast.snap
---
source: game-core/tests/snapshots.rs
expression: game
---
* 0: 5
  1: 7

    0   1   2   3   4   5   6   7
0:|   |   |   |   |   |   |   |   |
1:|   |   |   |   |   |   |   |   |
2:|   |   |   |   |   |   |   |   |
3:|   |   |   |   | 0-|   |   |   |
4:|   |   |   |   |   |   |   |   |
5:|   |   |   |   |   |   |   |   |
6:|   |   |   |   |   |   |   |   |
7:|   |   |   |   |   |   |   |   |
