game-core/tests/snapshots/snapshots__0007_Cross merge and capture.snap
---
source: game-core/tests/snapshots.rs
expression: game
---
* 0: 3
  1: 7

    0   1   2   3   4   5   6   7
0:|   |   |   | 0+|   |   |   |   |
1:|   |   |   |   |   |   |   |   |
2:|   |   |   |   |   |   |   |   |
3:|   |   |   |   |   |   |   |   |
4:|   |   |   |   |   |   |   |   |
5:|   |   |   |   |   |   |   |   |
6:|   |   |   |   |   |   |   |   |
7:|   |   |   |   |   |   |   |   |
